app/src/main/java/com/example/quizz/domain/model/error/ErrorFieldDto.kt
package pl.lsisoftware.cinema_domain.model.dto.error

import androidx.annotation.Keep

@Keep
data class ErrorFieldDto(
    val code: Int?,
    val message: String?
)